Fix: Align elements in Header and Headline section     Place navbar and logo separately under the header and align using flex     Change position of header from relative to absolute     Make all links point to a location or reseource     Add missing social media icons

--- a/style.css
+++ b/style.css
@@ -7,16 +7,24 @@
     background: #fff;
   }
 
-  .logo img {
-    /* Logo Placeholder */
+  .header {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 44px;
+    bottom: 0px;
+    max-width: 100%;
+    height: 92px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
+    flex-shrink: 0;
+  }
+
+  .logo img {
     padding: 10px 12px;
     position: absolute;
     height: 70px;
     left: 12px;
-    top: calc(50% - 40px / 2);
   }
 
   .menu-icons {
@@ -24,19 +32,12 @@
 
     max-width: 100%;
     height: 24px;
-
-    /* Inside auto layout */
-
     flex: none;
     order: 0;
     flex-grow: 0;
   }
 
   .menu-button {
-    /* Normal Button/Tertiary/Enabled */
-
-    /* Auto layout */
-
     display: flex;
     flex-direction: row;
     align-items: flex-end;
@@ -45,7 +46,6 @@
     width: 40px;
     height: 40px;
     right: 24px;
-    top: calc(50% - 40px / 2);
     border-radius: 8px;
   }
 
@@ -67,7 +67,6 @@
     /* left: calc(50% - 375px / 2); */
     top: 92px;
     background-image: url(assets/images/header-bg/header-shapes-mobile.svg);
-    list-style-type: none;
   }
 
   .headline h1 {
@@ -122,15 +121,6 @@
     flex-grow: 0;
   }
 
-  .navbar {
-    max-width: 100%;
-    height: 92px;
-    display: flex;
-    position: relative;
-    align-items: flex-start;
-    flex-shrink: 0;
-  }
-
   .toolbar {
     position: absolute;
     left: 5px;
@@ -139,14 +129,14 @@
     bottom: 20px;
   }
 
-  .tertiary-enabled {
+  .navbar {
     /* Normal Button/Tertiary/Enabled */
 
     /* Auto layout */
 
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: flex-start; */
     padding: 8px;
     position: absolute;
     width: 40px;
